# chortle

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  build.sh  chortle.py  hello.html  lambda_function.py  package.json  pyproject.toml  setup.cfg
app/: app.js  package-lock.json  package.json
app/public/: chortle.html  chortle.js
chortle/: build.py  lambda_function.py  strategy_handler.py
chortle_front_end/: package-lock.json  package.json
chortle_front_end/public/: index.html
chortle_front_end/src/: App.css  App.js  tableCreation.js
frontend/: chortle.html  package-lock.json
frontend/public/: chortle.js
src/: tableCreation.js
src/lambda/chortle-button-press/: lambda_function.py  strategy_handler.py
src/lambda/chortle-status-update/: lambda_function.py
src/web/: READ.ME  chortle.html  chortle.js
src/web/Resources/: Theme.css
tests/: test_chortle.py
