[tool.poetry]
name = "chortle"
version = "0.1.0"
description = ""
authors = ["Bradley Sherman <sirrus233@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.13.16"
mypy-boto3-lambda = "^1.13.16"
mypy-boto3-dynamodb = "^1.13.16"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.9.0"
pre-commit = "^2.4.0"
pylint = "^2.5.2"
moto = "^1.3.14"

[tool.poetry.scripts]
build-table = "chortle.build:build_chortle_table"
update-lambda = "chortle.build:update_lambda"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
